--- a/appl/icp/eicp/CMakeLists.txt
+++ b/appl/icp/eicp/CMakeLists.txt
@@ -4,8 +4,15 @@ dune_add_test(NAME columneicpbox
               SOURCES eicp.cc
               COMPILE_DEFINITIONS TYPETAG=EICPColumnBoxTypeTag)
 
+dune_add_test(NAME columnleobox
+              SOURCES leo.cc
+              COMPILE_DEFINITIONS TYPETAG=LEOColumnBoxTypeTag)
+  
 #install headers
 install(FILES
 eicp.cc
 eicpcolumnproblem.hh
+leo.cc
+leocolumnproblem.hh
 DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/appl/icp/eicp)
+
