--- a/dumux/material/chemistry/biogeochemistry/CMakeLists.txt
+++ b/dumux/material/chemistry/biogeochemistry/CMakeLists.txt
@@ -1,4 +1,5 @@
 #install headers
 install(FILES
 enzymecarbonicacid.hh
+leocarbonicacid.hh
 DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/dumux/material/chemistry/biogeochemistry)
