--- a/dumux/material/solidsystems/CMakeLists.txt
+++ b/dumux/material/solidsystems/CMakeLists.txt
@@ -1,4 +1,5 @@
 #install headers
 install(FILES
 enzymeminsolids.hh
+leominsolids.hh
 DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/dumux/material/solidsystems)
